syntax = "proto3";

package schemas.greyseal.v1;

import "google/protobuf/timestamp.proto";

enum Source {
  SOURCE_UNSPECIFIED = 0;
  SOURCE_WEBSITE = 1;
  SOURCE_PDF = 2;
}

message Resource {
  string uuid = 1;
  google.protobuf.Timestamp created_at = 2;
  string service = 3;
  string entity = 4;
  Source source = 5;
  string path = 6;
}